syntax = "proto3";

package agntcy.dir.store.v1;

import "agntcy/dir/core/v1/record.proto";
import "google/protobuf/struct.proto";

// RecordReferrer represents a referrer object or an association
// to a record. The actual structure of the referrer object can vary
// depending on the type of referrer (e.g., signature, public key, etc.).
message RecordReferrer {
    // The type of the referrer.
    string type = 1;

    // Annotations attached to the referrer object.
    map<string, string> annotations = 2;

    // Record reference to which this referrer is associated.
    core.v1.RecordRef record_ref = 3;

    // The actual data of the referrer, stored as bytes.
    google.protobuf.Struct data = 4;
}
